hard-gists/284507/run.log
=== Docker Run Log for 284507 ===
Started at: Mi 29. Okt 13:18:14 CET 2025

[2025-10-29 13:18:14] START: Running container for 284507
[2025-10-29 13:18:15] SUCCESS: Container 01f2f410e66f7834a800c7570959d938da23cca929e58401be6153d22cc6f4fb started for 284507
=== Container logs for 284507 ===
  File "/snippet.py", line 49
    print "-", root, dirs, files
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 284507 ===
[2025-10-29 13:18:17] INFO: Container 01f2f410e66f7834a800c7570959d938da23cca929e58401be6153d22cc6f4fb has stopped
